# cade

./: .cade  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/: direnv-compat.bash  direnv-compat.nix  direnv-compat.nu  module.nix  package.nix  snippets.nix
src/: config.rs  core.rs  envrc.rs  envs.rs  loaders.rs  main.rs  shells.rs  types.rs  verbosity.rs
src/cli/: clap.rs  mod.rs  parse.rs
tests/: integration.rs
