[package]
name = "cade"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
description = "an intelligent, cascading environment manager"
repository = "https://github.com/manic-systems/cade"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
# lto = true
# panic = "abort"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
microxdg = "0.2.0"
rusqlite = "0.37.0"
serde = { version = "1.0.226", features = ["derive"] }
shlex = "1.3.0"
serde_json = "1.0.145"
whoami = { version = "1.6.1", default-features = false }
